Fix glitch in letterspacing in new browsers

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h1 {
   font-size: 10vw;
   font-family: 'Exo', sans-serif;
   font-weight: 100;
-  letter-spacing: -6.8vw;
+  letter-spacing: -4.8vw;
   text-transform: uppercase;
   color: white;
 }
